--- a/backend/www/index.html
+++ b/backend/www/index.html
@@ -1,10 +1,3 @@
-<!--
-* CoreUI - Free Angular 9 Admin Template
-* @version v2.9.0
-* @link https://coreui.io/angular/
-* Copyright (c) 2017-2020 creativeLabs Łukasz Holeczek
-* Licensed under MIT (https://coreui.io/license)
--->
 <!doctype html>
 <html>
 <head>
@@ -12,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="CoreUI - Free Angular Admin Template">
-  <meta name="author" content="Łukasz Holeczek">
-  <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
+  <meta name="description" content="Monitoreo IoT">
+  <meta name="author" content="MOG">
+  <meta name="keyword" content="Bootstrap,Admin,Template, Angular,Dashboard,Typescript">
 	<link rel="shortcut icon" href="assets/favicon.ico">
-	<title>CoreUI - Free Angular Admin Template</title>
+	<title>Monitoreo IoT</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
   <script>
@@ -31,5 +24,5 @@
 <link rel="stylesheet" href="styles.8f97c872d27fcd3e0e8a.css"></head>
 <body class="app">
   <!-- App Loading... -->
-<script src="runtime.bb1920501ade7aa85647.js" defer></script><script src="polyfills-es5.60d306a881eecd18f818.js" nomodule defer></script><script src="polyfills.33fca17ca6a0589b9c6a.js" defer></script><script src="scripts.2606bb012821f2faba39.js" defer></script><script src="main.7f1cde3a4e746e4841b5.js" defer></script></body>
+<script src="runtime.46035589084bfb346326.js" defer></script><script src="polyfills-es5.60d306a881eecd18f818.js" nomodule defer></script><script src="polyfills.33fca17ca6a0589b9c6a.js" defer></script><script src="scripts.2606bb012821f2faba39.js" defer></script><script src="main.7fbf32932c37afdd97ce.js" defer></script></body>
 </html>
